--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -60,6 +60,7 @@ nav {
 .navigation-list {
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
     list-style: none;
     width: 100%;
     padding: 0;
@@ -198,6 +199,7 @@ nav {
     .navigation-list {
         display: flex;
         flex-flow: row wrap;
+        justify-content: space-between;
         list-style-type: none;
         padding: 0;
         margin: 0;
@@ -223,7 +225,7 @@ nav {
         justify-content: center;
         width: 100%;
         color: white;
-        font-size: 13px;
+        font-size: 16px;
         font-weight: 600;
         text-decoration: none;
         background-color: #ff002f
@@ -321,6 +323,7 @@ nav {
     .navigation-list {
         display: flex;
         flex-flow: row wrap;
+        justify-content: space-between;
         list-style-type: none;
         padding: 0;
         margin: 0;
@@ -346,7 +349,7 @@ nav {
         justify-content: center;
         width: 100%;
         color: white;
-        font-size: 20px;
+        font-size: 16px;
         font-weight: 600;
         text-decoration: none;
         background-color: #ff002f;
@@ -711,8 +714,7 @@ h1 {
     flex-flow: column wrap;
 }
 
-.tour:not(:hover)>p,
-.tour:not(:hover)>.button {
+.tour:not(:hover)>p {
     display: none;
 }
 
@@ -1257,7 +1259,7 @@ h1 {
     .band-members .members-section .member .lightbox {
         position: fixed;
         width: 80%;
-        top:50%;
+        top: 50%;
         left: 50%;
         transform: translate(-50%, -60%);
         z-index: 999;
@@ -1286,7 +1288,7 @@ h1 {
         display: flex;
         flex-flow: column;
         align-items: center;
-        border:none;
+        border: none;
         border-left: 1px solid #e2e2e2;
         background-color: white;
 
@@ -1343,7 +1345,7 @@ h1 {
         display: none;
         position: fixed;
         top: 0;
-        left:0;
+        left: 0;
         width: 100%;
         height: 100%;
         background-color: black;
@@ -1356,6 +1358,146 @@ h1 {
 
 
 /*==============================================BAND PAGE==============================================*/
+
+/*==============================================MUSIC PAGE==============================================*/
+
+.video-section {
+    width: 100%;
+    margin-bottom: 40px;
+}
+
+.video-section iframe {
+    width: 100%;
+    height: 400px;
+    border: 10px solid white;
+}
+
+.music-section {
+    margin-bottom: 150px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.music-section h1 {
+    margin-bottom: 30px;
+}
+
+.album {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    background-color: white;
+    margin-bottom: 80px
+}
+
+.album img {
+    width: 100%;
+    padding: 5px;
+    background: white;
+}
+
+.album .song-info {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 20px;
+    padding top: 0;
+    border-top: 3px solid #1f3759;
+}
+
+.album .song-info h4 {
+    font-size: 24px;
+    font-weight: 600;
+    color: #ff002f;
+    margin: 0;
+}
+
+.album .song-info p {
+    font-size: 18px;
+    font-weight: ;
+    color: #333;
+    margin: 10px;
+}
+
+
+@media (min-width: 768px) {
+    
+    .video-section {
+        width: 80%;
+        margin-bottom: 40px;
+    }
+
+    .video-section iframe {
+        width: 100%;
+        height: 400px;
+    }
+
+    .music-section {
+        width: 80%;
+        margin-bottom: 150px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .music-section h1 {
+        margin-bottom: 30px;
+    }
+
+    .album {
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        margin-bottom: 80px;
+        background: none;
+        align-items: center;
+    }
+
+    .album img {
+        max-width: 400px;
+        border-bottom: 3px solid #1f3759;
+    }
+
+    .album .song-info {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding: 20px;
+        padding top: 0;
+        background-color: white;
+        width: 100%;
+        border: none;
+        background-clip: padding-box;
+    }
+
+    .album .song-info h4 {
+        font-size: 24px;
+        font-weight: 600;
+        color: #ff002f;
+        margin: 0;
+    }
+
+    .album .song-info p {
+        font-size: 18px;
+        font-weight: ;
+        color: #333;
+        margin: 10px;
+    }
+}
+
+@media (min-width: 1200px) {
+    .video-section iframe {
+        height: 600px;
+    }
+}
+
+
+
+
+
+
+/*==============================================MUSIC PAGE==============================================*/
 
 /*==============================================MAIN==============================================*/
 
@@ -1376,7 +1518,7 @@ h1 {
 
 h3 {
     font-size: 12px;
-    font-weight: 800;
+    font-weight: 600;
     padding: 0px;
     margin-top: 0;
     margin-bottom: 0;
@@ -1440,7 +1582,6 @@ hr {
     align-items: center;
     color: white;
     text-decoration: none;
-    font-weight: 500;
 
 }
 
@@ -1457,7 +1598,6 @@ hr {
 .contact-section span {
     font-size: 12px;
     margin-left: 10px;
-    font-weight: 600;
 }
 
 .contact-section li:first-child i+span {
@@ -1602,7 +1742,6 @@ hr {
     .contact-section span {
         font-size: 20px;
         margin-left: 10px;
-        font-weight: 600;
     }
 
     .contact-section li:first-child i+span {
