Increased the height of video clip

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1617,6 +1617,12 @@ hr {
     }
     
     
+     /*____________________________MEDIA-PAGE____________________________*/
+    .video-section iframe {
+    height: 600px;
+}
+    
+    
     /*____________________________FOOTER____________________________*/
     .footer {
         height: 120px;
