--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -313,6 +313,9 @@ h1 {
 .publicity-container button:active,
 .publicity-container button:hover {
     background-color: #BD0021;
+    -webkit-transition: all .3s ease-in-out;
+    -o-transition: all .3s ease-in-out;
+    transition: all .3s ease-in-out;
 }
 
 .publicity-container p {
@@ -1274,10 +1277,6 @@ hr {
     color: #F0002A;
 }
 
-.modal .modal-content .modal-body .contact-info .contact-center .info i:hover {
-    color: #BD0021;
-}
-
 .modal .modal-content .modal-body .contact-info .contact-center .info span {
     font-size: 20px;
     margin-left: 10px;
@@ -1285,7 +1284,9 @@ hr {
 }
 
 .modal .modal-content .modal-body .contact-info .contact-center .info span:hover {
-    color: black;
+    -webkit-transition: all .3s ease-in-out;
+    -o-transition: all .3s ease-in-out;
+    transition: all .3s ease-in-out;
 }
 
 .modal .modal-content .modal-body .contact-info .contact-center #connect {
@@ -1309,7 +1310,7 @@ hr {
     font-size: .8em;
 }
 
-.modal .modal-content .modal-body form .button-center {
+.modal .modal-content .modal-body form .buttons {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -1318,10 +1319,12 @@ hr {
         -ms-flex-flow: column wrap;
             flex-flow: column wrap;
     -ms-flex-pack: distribute;
-        justify-content: space-around;
+        justify-content: space-between;
+        align-items: flex-end;
+        margin-top: 30px;
 }
 
-.modal .modal-content .modal-body form .button-center button {
+.modal .modal-content .modal-body form .buttons button {
     width: 100%;
     height: 50px;
     font-size: 16px;
@@ -1333,24 +1336,37 @@ hr {
     font-family: 'Acme', sans-serif;
 }
 
-.modal .modal-content .modal-body form .button-center button:focus {
+.modal .modal-content .modal-body form .buttons button[type=reset] {
+    width: 90px;
+    height: 20px;
+    font-size: 12px;
+    background-color: #DCDCDC;
+    color: #222;
+    border: none;
+    border-radius: 0;
+    margin-top: 30px;
+    font-family: 'Acme', sans-serif;
+    
+}
+
+.modal .modal-content .modal-body form .buttons button:focus {
     outline: none;
 }
 
-.modal .modal-content .modal-body form .button-center button:active,
-.modal .modal-content .modal-body form .button-center button:hover {
+.modal .modal-content .modal-body form .buttons button:active,
+.modal .modal-content .modal-body form .buttons button:hover {
     background-color: #BD0021;
+    -webkit-transition: all .3s ease-in-out;
+    -o-transition: all .3s ease-in-out;
+    transition: all .3s ease-in-out;
 }
 
-.modal .modal-content .modal-body form .button-center p {
-    color: #111;
-    font-size: 18px;
-    font-weight: 600;
-    -ms-flex-item-align: center;
-        -ms-grid-row-align: center;
-        align-self: center;
-    margin: 0;
-
+.modal .modal-content .modal-body form .buttons button[type=reset]:active,
+.modal .modal-content .modal-body form .buttons button[type=reset]:hover {
+    background-color: #BEBEBE;
+    -webkit-transition: all .3s ease-in-out;
+    -o-transition: all .3s ease-in-out;
+    transition: all .3s ease-in-out;
 }
 
 .modal .modal-content .modal-body form .form-group .form-control:focus {
@@ -2063,7 +2079,7 @@ hr {
     
     
      /*____________________________BOOTSTRAP-MODAL/BOOKING-FORM____________________________*/
-    .modal .modal-content .modal-body form .button-center {
+    .modal .modal-content .modal-body form .buttons {
         -webkit-box-orient: horizontal;
         -webkit-box-direction: normal;
             -ms-flex-flow: row;
@@ -2073,7 +2089,7 @@ hr {
                 justify-content: space-between;
     }
 
-    .modal .modal-content .modal-body form .button-center button {
+    .modal .modal-content .modal-body form .buttons button {
         width: 180px;
     }
 
